--- a/模式1.html
+++ b/模式1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=2.5">
     <link href="css.css" rel="stylesheet" type="text/css">
     <title>模式一</title>
-    <script src="yuanli.js"></script>
+    <script src="yuanli1.js"></script>
   </head>
   <body>
     <div  class="beijing">
@@ -72,7 +72,7 @@
         
         <div id="conclude"><input type="text" id="input-box">
           <button onclick="handleInput()" id="panduan">判断</button>
-</div>  
+</div>    <div id="final"><div id="timer"></div>    
        </div>
       </div>
   
